@@ -1,5 +1,7 @@
 == master
 
+* Add compatibility with has_messages 0.3.1 / state_machine 0.5.0
+
 == 0.2.0 / 2008-12-14
 
 * Remove the PluginAWeek namespace
